--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
+        distribution: 'adoptopenjdk'  # Specify the distribution
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
     - name: Publish AAR
       run: ./gradlew publish
