--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'adoptopenjdk'  # Specify the distribution
+        distribution: 'temurin'  # Use the Temurin distribution
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
