--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,15 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin'  # Use the Temurin distribution
+        distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Install Gradle
+      uses: gradle/gradle-build-action@v3
+      with:
+        gradle-version: '7.5'  # Specify the version you need
 
     - name: Publish AAR
-      run: ./gradlew publish
+      run: gradle publish
       env:
         GPR_USER: ${{ secrets.GITHUB_ACTOR }}
         GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
