--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.example'
+            groupId = 'com.es.sc.voice'
             artifactId = 'sc_voice-debug'
             version = '1.0.0'
 
