--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,20 @@
     <artifactId>sc_voice-debug/artifactId>
     <version>1.0.0</version>
     <packaging>aar</packaging>
+             
+   <dependencies>
+         <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+
+              <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+            
+    </dependencies>
+
 </project>
