--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ publishing {
 
                 // Declare dependencies
                 dependencies {
-                    implementation 'com.google.code.gson:gson:2.11.0' 
+                    implementation("com.google.code.gson:gson:2.11.0")
                 }
             }
         }
