--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/POM/4.0.0">
     <modelVersion>1.0.0</modelVersion>
     <groupId>com.es.sc.voice</groupId>
-    <artifactId>sc_voice-debug/artifactId>
+    <artifactId>sc_voice-debug</artifactId>
     <version>1.0.0</version>
     <packaging>aar</packaging>
              
    <dependencies>
          <dependency>
-        <groupId>com.google.code.gson</groupId>
-        <artifactId>gson</artifactId>
-        <version>2.11.0</version>
-    </dependency>
-
-              <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.11.0</version>
